# tde

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: config.rs  laucher.rs  launcher.rs  layout.rs  main.rs  notifications.rs  plugin.rs  pty.rs  statusbar.rs  workspace.rs
