[package]
name = "tde"
version = "0.1.1"
edition = "2021"
description = "TDE — Terminal Desktop Environment"
license = "MIT"
repository = "https://github.com/user14923929/tde"
readme = "README.md"

[[bin]]
name = "tde"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
dirs = "5"
chrono = { version = "0.4", features = ["clock"] }
sysinfo = "0.33"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
mlua = { version = "0.10", features = ["lua54", "vendored"] }

[profile.release]
opt-level = 3
strip = true